# otus

./: Cargo.toml
benches/: search_benchmark.rs
src/: chess.rs  lib.rs  main.rs  uci.rs
src/board/: board_utils.rs  mod.rs  model_utils.rs  models.rs  move_checking.rs  tests.rs
src/board/move_checking/: square_utils.rs  tests.rs
src/chess/: model_utils.rs  models.rs  move_checking.rs  player.rs  tests.rs
src/chess/move_checking/: square_utils.rs  tests.rs
src/chess/player/: human_player.rs  random_player.rs
src/hashing/: mod.rs  tests.rs  transposition_table.rs  zobrist_keys.rs
src/players/: human_player.rs  mod.rs  otus.rs  random_player.rs
src/search/: eval.rs  minimax.rs  mod.rs  perft.rs
zobrist_keygen/: zobrist_keygen.py
