[package]
name = "otus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.18.2"

[[bench]]
name = "search_benchmark"
harness = false

[profile.release]
debug = 1
